src/objects/Framework__Spark_Plug_Extension_Point__mdt.object
<CustomObject>
    <description>Spark Plug Extension Points define spots where arbitrary screens can be added to Fonteva workflows.</description>
    <fields>
        <fullName>Framework__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is extension point enabled or not.</description>
        <inlineHelpText>Is extension point enabled or not.</inlineHelpText>
        <label>Extension Point enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__Lightning_Component__c</fullName>
        <description>Aura component to display in the spark plug interface.</description>
        <inlineHelpText>Aura component to display in the spark plug interface.</inlineHelpText>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of extension if there are multiple for this extension point.</description>
        <inlineHelpText>Order of extension if there are multiple for this extension point.</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Spark Plug Extension Point</label>
    <pluralLabel>Spark Plug Extension Points</pluralLabel>
</CustomObject>